tests/cases/match/errors/match-literal-nonexhaustive.ari
fn main() -> i64 {
  return match 2 {
    1 => 10,
    2 => 20,
  };
}
